--- a/project2/package.json
+++ b/project2/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "project2",
 	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
+	"description": "A Node.js To-do app with Express, SQLite, and JWT authentication",
+	"main": "src/server.js",
 	"scripts": {
-		"dev": "nodemon src/server.js",
+		"dev": "nodemon --env-file=.env --experimental-sqlite ./src/server.js",
+		"start": "node --env-file=.env --experimental-sqlite ./src/server.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
@@ -15,7 +16,9 @@
 		"bcryptjs": "^3.0.2",
 		"express": "^5.1.0",
 		"jsonwebtoken": "^9.0.2",
-		"nodemon": "^3.1.10",
 		"sql-formatter": "^15.6.6"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.10"
 	}
 }
